# siwe-linux

./: .env.example  .gitignore  .gitmodules  Cargo.toml  Justfile  LICENSE  README.md  act.sh
.github/: dependabot.yml
.github/workflows/: build_and_test.yml  checks.yml  local_build.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/pam/: Cargo.toml  build_and_test.sh  test.c
crates/pam-tests/: Cargo.toml
crates/pam-tests/src/: main.rs
crates/pam/conf/: siwe-auth
crates/pam/src/: lib.rs  pam.rs  tests.rs  wc.rs
crates/pam/src/misc/: client.rs  conv.rs  env.rs  functions.rs  mod.rs  module.rs  types.rs
crates/pam/src/utils/: mod.rs  pamd_conf_parser.rs  wc.rs
crates/rollup/: Cargo.toml
crates/siwe-pam/: Cargo.toml
data/: siwe_user_accounts.json
tests/pam/: build_and_test.sh
