[workspace]

resolver = "2"

members = [
    "crates/pam",
    "crates/cli",
    "crates/rollup"
]

[workspace.package]
version = "0.0.1"
edition = "2021"
license = "MIT"
authors = ["Abran DeCarlo <abrandecarlo@protonmail.com>"]
publish = false

[workspace.dependencies]
tokio = "1.36.0"
tracing = "0.1.40"

walletconnect_sdk = { git = "https://github.com/WalletConnect/WalletConnectRust", rev = "b4683d70a46b990433a8d38d8a047f330949f7bf" }

serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
