[workspace]
members = [
    "crates/pam",
    "crates/cli",
    "crates/rollup",
    "crates/pam-tests"
]

[workspace.package]
version = "0.0.1"
edition = "2021"
license = "MIT"
authors = ["Abran DeCarlo <abrandecarlo@protonmail.com>"]
publish = false

[workspace.dependencies]
tracing = "0.1.40"

serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"