[package]
name = "pam-siwe"
version = "0.0.1"
edition = { workspace = true }
resolver = "2"
authors = { workspace = true }
publish = false

[lib]
name = "pam_siwe"
crate-type = ["cdylib"]

[dependencies]
rand = "0.8.5"
fast_qr = "0.11.0"
serde_json = "1.0.113"

pam-bindings = { path = "../../submodules/pam-rs/pam" }