[package]
name = "pam-siwe"
version = "0.0.1"
edition = { workspace = true }
resolver = "2"
authors = { workspace = true }
publish = false

[lib]
name = "pam_siwe"
crate-type = ["cdylib"]

[dependencies]
rand = "0.8.5"
dotenv = "0.15.0"
fast_qr = "0.11.0"
serde_json = "1.0.113"
structopt = "0.3.26"
tokio = { version = "1.36.0", features = ["full"] }
walletconnect_sdk = { git = "https://github.com/WalletConnect/WalletConnectRust", rev = "6a24d5f63a4c428e9a3d7832af3b0fdef2e70905" }

pam-bindings = { git = "https://github.com/abrandec/pam-rs.git", package = "pam-bindings" }
pam = { git = "https://github.com/1wilkens/pam", rev = "daf26ae3512d8e5a7478ccff1e4232ef5ebf9b03" }